anyway From Mac

--- a/client6.html
+++ b/client6.html
@@ -25,7 +25,7 @@ mounted get_param() getのパラメーターからthis.match_id this.send_id thi
 fetch_read_waiting_matches() /read_waiting_matches
 fetch_check_peer_id_or_change_it() /check_peer_id_or_change_it
 fetch_get_peer_id_from_matches_as_sender_or_as_receiver() /get_peer_id_from_matches_as_sender_or_as_receiver
-fetch_update_when_to_send_receive() 
+fetch_update_when_to_send_receive() /update_when_to_send_waiting
 fetch_read_matches() /read_matches
 fetch_read_matches_and_request_match_data() /read_matches_and_request_match_data
 exe_update() /update_when_to_send_receive
