--- a/client6.html
+++ b/client6.html
@@ -19,37 +19,27 @@
 http://127.0.0.1:3000/client6.html?match_id=4&send_id=5&receive_id=7&sender_or_receiver=sender
 
 ⭕️
-mounted get_param() getのパラメーターからthis.match_id this.send_id this.receive_id this.sender_or_receiverをセット
+paramsを取得(match_id, send_id, receive_id, sender_or_receiver): mounted get_param() getのパラメーターからthis.match_id this.send_id this.receive_id this.sender_or_receiverをセット
 
 ❌
-fetch_read_waiting_matches() /read_waiting_matches
-fetch_check_peer_id_or_change_it() /check_peer_id_or_change_it
 fetch_get_peer_id_from_matches_as_sender_or_as_receiver() /get_peer_id_from_matches_as_sender_or_as_receiver
-fetch_update_when_to_send_receive() /update_when_to_send_waiting
-fetch_read_matches() /read_matches
-fetch_read_matches_and_request_match_data() /read_matches_and_request_match_data
-exe_update() /update_when_to_send_receive
-set_update_when_to_send_waiting()
+    // peer_idを取得するエンドポイント // sender_or_receiverがsenderならreceiver_peer_idを取得,receiverならsender_peer_idを取得
+fetch_read_matches("read_matches") /read_matches
+fetch_read_matches("read_waiting_matches") /read_waiting_matches
+fetch_check_peer_id_or_change_it() /check_peer_id_or_change_it
+fetch_update_when_to_send_change("wainting", id) /update_when_to_send_waiting
+fetch_update_when_to_send_change("receive") /update_when_to_send_receive
 
 
-
-
-paramsを取得(match_id, send_id, receive_id, sender_or_receiver)
 matchesからqueryで(match_id, send_id, receive_id, sender_or_receiver)when_to_sendを取得 => 一つの関数にまとめる
 matchesからqueryで(match_id, send_id, receive_id, sender_or_receiver)when_to_sendの更新(match=>receive=>waiting) => 一つの関数にまとめる
 sender_peer_idとreceiver_peer_idが必要(sender_peer_id,receiver_peer_idどちらかが欠けていることがある)
 -->
 
-    <!-- fetch_read_matches -->
-    <button @click="fetch_read_matches()">fetch_read_matches</button>
     {{ login_id_name }}
     {{ sender_peer_id }}
 {{ receiver_peer_id }}
 
-    <!-- fetch_check_peer_id_or_change_it button -->
-    <button @click="fetch_check_peer_id_or_change_it()">fetch_check_peer_id_or_change_it</button>
-    <!-- fetch_read_waiting_matches button -->
-    <!-- <button @click="fetch_read_waiting_matches()">fetch_read_waiting_matches</button> -->
     waiting_matched: {{ waiting_matched }}
 
     ページをリフレッシュした際にpeer id Aが変わるため、
@@ -71,11 +61,7 @@ sender_peer_idとreceiver_peer_idが必要(sender_peer_id,receiver_peer_idどち
     endpoint: {{ endpoint }}
     <!-- button fetch_hello -->
     <button @click="fetch_hello()">fetch_hello</button>
-    <!-- button fetch_get_peer_id_from_matches_as_sender_or_as_receiver -->
-    <button @click="fetch_get_peer_id_from_matches_as_sender_or_as_receiver()">fetch_get_peer_id_from_matches_as_sender_or_as_receiver</button>
 
-    <!-- button fetch_update_when_to_send_receive -->
-    <button @click="fetch_update_when_to_send_receive()">fetch_update_when_to_send_receive</button>
 
 
     <div id="qrcode"></div>
@@ -136,18 +122,6 @@ mounted() {
 beforeUpdated() {},
 updated() {},
 methods: {
-async fetch_read_waiting_matches(){
-try {
-    const res = await fetch(this.endpoint + '/read_waiting_matches', {method: 'POST',headers: {'Content-Type': 'application/json',},
-            body: JSON.stringify({user_id: this.login_id_name.id}),
-        });
-    const data = await res.json(); console.log(data);
-    this.waiting_matched = data.message;
-    this.ERROR_MESSAGE = "";
-} catch (error) {
-    this.ERROR_MESSAGE = error.message;
-}
-},
 async fetch_check_peer_id_or_change_it(){
     try {
         const res = await fetch(this.endpoint + '/check_peer_id_or_change_it', {method: 'POST',headers: {'Content-Type': 'application/json',},
@@ -197,88 +171,66 @@ try {
     this.ERROR_MESSAGE = error.message;
 }
 },
-set_update_when_to_send_waiting(peer_id_when_get_open){
-    const param_data = [
-        peer_id_when_get_open,
-        this.match_id,
-        this.send_id,
-        this.receive_id,
-        this.sender_or_receiver,
-    ];
-    this.sample = param_data;
-    this.peer_id_when_get_open = peer_id_when_get_open;
-    console.log("set_update_when_to_send_waiting()", param_data);
-},
-async fetch_update_when_to_send_receive(){
+async fetch_update_when_to_send_change(To_Any="waiting", id=null){ // change to receive or waiting
 try {
-    const res = await fetch(this.endpoint + '/update_when_to_send_waiting', {method: 'POST',headers: {'Content-Type': 'application/json',},
-            body: JSON.stringify({
-                peer_id_when_get_open: this.peer_id_when_get_open,
-                match_id: this.match_id,
-                send_id: this.send_id,
-                receive_id: this.receive_id,
-                sender_or_receiver: this.sender_or_receiver,
-            }),
-        });
-    const data = await res.json(); console.log(data);
-    this.ERROR_MESSAGE = "";
+    // To_Anyが"receive"でも"waiting"でもどちらでもない場合はエラースロー
+    if(To_Any !== "receive" && To_Any !== "waiting"){
+        throw new Error('To_Any is not "receive" or "waiting"');
+    }
+
+    if(To_Any === "receive"){
+        const res = await fetch(this.endpoint + '/update_when_to_send_receive', {method: 'POST',headers: {'Content-Type': 'application/json',},
+                body: JSON.stringify({match_id: Match_Id}),
+            });
+        const data = await res.json(); console.log(data);
+        this.receive_matched = data.message;
+        this.ERROR_MESSAGE = "";
+    }
+    if(To_Any === "waiting"){
+        this.peer_id_when_get_open = set_update_when_to_send_waiting(id);
+        const res = await fetch(this.endpoint + '/update_when_to_send_waiting', {method: 'POST',headers: {'Content-Type': 'application/json',},
+                body: JSON.stringify({
+                    peer_id_when_get_open: this.peer_id_when_get_open,
+                    match_id: this.match_id,
+                    send_id: this.send_id,
+                    receive_id: this.receive_id,
+                    sender_or_receiver: this.sender_or_receiver,
+                }),
+            });
+        const data = await res.json(); console.log(data);
+        this.ERROR_MESSAGE = "";
+    }
 } catch (error) {
     this.ERROR_MESSAGE = error.message;
 }
 },
-async fetch_read_matches(){
-    const response = await fetch(this.endpoint + '/read_matches');
-    const data = await response.json();
+
+async fetch_read_matches(Req_Type="read_matches"){
+    let data = null;
+        if(Req_Type === "read_waiting_matches"){
+            const res = await fetch(this.endpoint + '/read_waiting_matches', {method: 'POST',headers: {'Content-Type': 'application/json',},
+                    body: JSON.stringify({user_id: this.login_id_name.id}),
+                });
+            data = await res.json(); console.log(data);
+            this.waiting_matched = data.message;
+        }
+        if(Req_Type === "read_matches"){
+            const response = await fetch(this.endpoint + '/read_matches');
+            data = await response.json();
+        }
     if(data.message){
         console.log(data);
-        // hoge = data.message[0];
-        // fuga = decodeURIComponent(hoge.match_data);
         this.matched = data.message;
         this.sender_or_receiver = (new URL(window.location.href).searchParams.get('sender_or_receiver'));
-        console.log(this.matched[0]);
-        console.log(this.sender_or_receiver);
-
-        // match_idをthis.matched[0].idから
         this.match_id = this.matched[0].id;
-
-
-
-// senderなら        this.login_id_name = this.matched[0].sender_id、receiverならthis.login_id_name = this.matched[0].receiver_id
         if(this.sender_or_receiver === 'sender'){
-            console.log("this.matched[0].sender_id", this.matched[0].send_id);
             this.login_id_name.id = this.matched[0].send_id;
         }
         if(this.sender_or_receiver === 'receiver'){
-            console.log("this.matched[0].receiver_id", this.matched[0].receive_id);
             this.login_id_name.id = this.matched[0].receive_id;
         }
-
     }
     return data;
-},
-async fetch_read_matches_and_request_match_data(){
-try {
-    const res = await fetch(this.endpoint + '/read_matches_and_request_match_data', {method: 'POST',headers: {'Content-Type': 'application/json',},
-            body: JSON.stringify({user_id: this.my_user_id}),
-        });
-    const data = await res.json(); console.log(data);
-    this.receive_matched = data.message;
-    this.ERROR_MESSAGE = "";
-} catch (error) {
-    this.ERROR_MESSAGE = error.message;
-}
-},    
-async exe_update(Match_Id){
-try {
-    const res = await fetch(this.endpoint + '/update_when_to_send_receive', {method: 'POST',headers: {'Content-Type': 'application/json',},
-            body: JSON.stringify({match_id: Match_Id}),
-        });
-    const data = await res.json(); console.log(data);
-    this.receive_matched = data.message;
-    this.ERROR_MESSAGE = "";
-} catch (error) {
-    this.ERROR_MESSAGE = error.message;
-}
 },
 send_text_fn(Text="sample_text"){
     console.log("send_text_fn");
@@ -377,12 +329,11 @@ peer.on('open', (id) => {
     document.querySelector('.result').value = id;
     my_side_global_conn = id;
     set_url_with_peer_id();
-    app.set_update_when_to_send_waiting(id);
+    app.fetch_update_when_to_send_change("waiting", id);
 });
-peer.on('connection', function(conn) {
-    conn.on('data', function(data){
-        console.log('Received', data);
-        if (data.another_peer_id){
+
+
+
             console.log("new another_peer_id", data.another_peer_id);
             document.querySelector('#connect-to-peer').value = data.another_peer_id;
             global_peerId = data.another_peer_id;
